Fix layout bug

--- a/app/assets/style/utils/_helpers.scss
+++ b/app/assets/style/utils/_helpers.scss
@@ -1,5 +1,5 @@
 .logo {
-  width: 96px;
+  display: block;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: left center;
