--- a/app/assets/style/utils/_utils.scss
+++ b/app/assets/style/utils/_utils.scss
@@ -1,7 +1,11 @@
+.logo {
+  width: 96px;
+}
+
 .logo-primary {
-  background: url("../assets/images/logo_pri.png");
+  background: url("/assets/images/logo_pri.png");
 }
 
 .logo-xf {
-  background: url("../assets/images/logo_xf.png");
+  background: url("/assets/images/logo_xf.png");
 }
