--- a/app/assets/style/utils/_variables.scss
+++ b/app/assets/style/utils/_variables.scss
@@ -4,3 +4,4 @@ $cus-success: #907A7B;
 $cus-gray: #707070;
 $cus-shadow: rgba(0,0,0,0.16);
 $font-family: 'Noto Sans TC', sans-serif;
+$anim-time: 0.2s;
